// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "default_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.allowClear: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": false,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.allowClear: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": true,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoSize: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": true,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.autoSize: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": true,
      "id": "properties.disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 12 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label span: 12_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.minRows: 2  maxRows: 6 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "maxRows": 6,
        "minRows": 2,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.minRows: 2  maxRows: 6_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Type your text here - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.placeholder: Type your text here_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": "Type your text here",
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.rows: 5 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "maxRows": 5,
        "minRows": 5,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.rows: 5_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: My TextArea Title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": undefined,
      "autoFocus": undefined,
      "autoSize": Object {
        "minRows": 3,
      },
      "className": "{}",
      "disabled": undefined,
      "id": "properties.title: My TextArea Title_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;
